@@ -1,28 +1,30 @@
 # Process this file with autoconf to produce a configure script.
 AC_INIT([msntp])
 
-# Increment msntp_configure_version by one for each
-# change to configure.ac or .m4 files which invalidates
-# cached values from previous versions.
-
-# It is not necessary to bump the version in more than one
-# configure.ac at the same time, as the cache is shared.
-# Previously used values should never be used again.
+# Increment msntp_configure_cache_version by one for each change to
+# configure.ac or .m4 files which invalidates cached values from
+# previous versions.
+#
+# If the change affects cache variables used only by the main NTP
+# configure.ac, then only its version number should be bumped, while
+# the subdir configure.ac version numbers should be unchanged.  The
+# same is true for a test/variable that is used only by one subdir
+# being changed incompatibly; only that subdir's cache version needs
+# bumping.
+#
+# If a change affects variables shared by all NTP configure scripts,
+# please bump the version numbers of all three.  If you are not sure,
+# the safe choice is to bump all three on any cache-invalidating change.
+#
+# In order to avoid the risk of version stamp collision between -stable
+# and -dev branches, do not simply increment the version, instead use
+# the date YYYYMMDD optionally with -HHMM if there is more than one
+# bump in a day.
 
 msntp_configure_cache_version=20090503
 
 # When the version of config.cache and configure do not
 # match, NTP_CACHEVERSION will flush the cache.
-
-# $NTP_CONFIGURE_PARENT is used to detect the top-level configure in
-# NTP_CACHEVERSION.  It is set to an empty string to indicate "known to
-# have no parent" while unset indicates no knowledge.  Just before
-# AC_CONFIG_SUBDIRS in NTP's main configure.ac, NTP_CONFIGURE_PARENT
-# is set to top.  In all NTP configure.ac files, we set it to NULL
-# if it is unset, so NTP_CACHE_VERSION does not rely on a heuristic.
-
-case "${NTP_CONFIGURE_PARENT=}" in
-esac
 
 NTP_CACHEVERSION([msntp], [$msntp_configure_cache_version])
 
